# bookwatch

./: .devenv.flake.nix  .gitignore  devenv.nix  devenv.yaml
.github/workflows/: back-image-build.yaml  docker-image.yml  front-image-build.yaml
back/: .devenv.flake.nix  .dockerignore  .gitignore  Cargo.toml  Dockerfile  devenv.local.nix  devenv.nix
back/src/: main.rs
front/: .devenv.flake.nix  .dockerignore  Dockerfile  app.config.ts  bun.lockb  devenv.local.nix  devenv.nix  package.json
front/src/: app.tsx
front/src/components/: Adder.tsx  Card.tsx
front/src/routes/: bookwatch.tsx  index.tsx
kubernetes/: back-deployment.yaml  back-service.yaml  front-deployment.yaml  front-ingress.yaml  front-service.yaml  k8s.tailscale.ingress.yml  mongo-deployment.yaml  rewrite-middleware.yaml
kubernetes/mongo/: mongo-secrets.yaml  mongo-service.yaml
