[package]
name = "back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7.5", features = ["tracing", "ws", "macros"]}
serde = "1.0.202"
serde_json = "1.0.117"
tokio = {version = "1.37.0", features = ["full"]}
